fixes illustration mobile

--- a/style.css
+++ b/style.css
@@ -372,21 +372,7 @@ body {
 }
 
 /* === OPTIONAL bottom dashed line (dummy header) === */
-.dummy-header::before {
-  content: "";
-  position: absolute;
-  bottom: 8px;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-image: repeating-linear-gradient(
-    to right,
-    #6A0201 0,
-    #6A0201 10px,
-    transparent 10px,
-    transparent 20px
-  );
-}
+
 
 
 
@@ -1150,7 +1136,7 @@ body {
   }
 
   .illu-wrapper {
-    max-width: 50%;
+    max-width: 80%;
     margin: 3rem auto;
   }
 
@@ -1278,6 +1264,66 @@ body {
 
 
 }
+
+/* === iPad / Tablet Landscape Fix === */
+@media screen and (min-width: 768px) and (max-width: 1180px) and (orientation: landscape) {
+
+  /* make layout behave like mobile again */
+  .image-wrapper {
+    max-width: 50%;
+    margin: 60px auto;
+  }
+
+  .main-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  .bg-shadow {
+    top: -20px;
+    left: 10px;
+  }
+
+  .timeline-section,
+  .text-section,
+  .scroll-text {
+    max-width: 90%;
+    margin: 0 auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .timeline-content {
+    padding: 20px 20px 80px 20px;
+  }
+
+  .illu-wrapper,
+  .press-illustration,
+  .eye-illustration {
+    max-width: 50%;
+    margin: 2rem auto;
+  }
+
+  .closing-text {
+    padding: 0 6rem 2rem;
+    line-height: 143%;
+    font-size: 1.2rem;
+    margin-bottom: 60px;
+}
+
+  .closing-parallax {
+    height: 90vh;
+  }
+
+
+  /* keep credits readable and centered */
+  .credits {
+    text-align: center;
+    margin: 60px auto 0;
+  }
+}
+
 
 /* === FINAL SECTION BLOCK (after timeline) === */
 .last-block {
